<resources>
    <string name="app_name">Popular Movies</string>
    <string name="error_message">Something went wrong</string>
    <string name="title">Title</string>
    <string name="average_vote">Average Vote</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release date</string>
    <string name="movie_poster">Movie poster</string>
    <string name="rating_sort">Sort by rating</string>
    <string name="popularity_sort">Sort by popularity</string>
</resources>
